# dcm-mini-viewer

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
dcm_mini_viewer/: main.py
dcm_mini_viewer/config/: preferences_manager.py
dcm_mini_viewer/dicom/: dicom_handler.py
dcm_mini_viewer/ui/: main_window.py
dcm_mini_viewer/ui/dialogs/: element_dialog.py
dcm_mini_viewer/utils/: logger.py
src/: main.py
src/config/: preferences_manager.py
src/dicom/: dicom_handler.py
src/ui/: main_window.py
src/ui/dialogs/: element_dialog.py
src/utils/: logger.py
test/: conftest.py  test_dicom_handler.py  test_element_dialog.py  test_logger.py  test_main.py  test_main_window.py  test_preferences_manager.py  test_preferences_manager_exceptions.py  test_window_level_widget.py
