[tool.poetry]
name = "dcm-mini-viewer"
version = "0.1.0"
description = "A discovery project for DICOM file viewing"
authors = ["Stuart Swerdloff <sjswerdloff@gmail.com>"]
license = "LGPL"
readme = "README.md"
packages = [{include = "dcm_mini_viewer", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
PySide6 = ">=6.4.0,<6.9"
pydicom = "2.4.4"
numpy = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-qt = "^4.2.0"
pytest-cov = "^4.1.0"
black = "^24.2.0"
flake8 = "^7.0.0"
pre-commit = "^3.5.0"
pytest-mock = "^3.14.0"
autoflake = "^2.3.1"
pylint = "^3.3.7"
pyinstaller = "^6.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 127
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["src"]
